part-3/3.02/pingpong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: zhubao/pingpong:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
